# sim_backend

./: .env  .gitignore  CLAUDE.md  alembic.ini  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: 7fcc7e56782b_initial_schema.py  9a59b8d94c73_create_all_tables.py
app/: config.py  database.py  main.py
app/api/v1/: bop.py  exports.py  master_data.py  plans.py  router.py  simulation.py  templates.py  versions.py
app/engine/: common.py  des_engine.py  line_balance.py
app/models/: __init__.py  ai.py  biz.py  md.py  res.py  sim.py  tpl.py
app/schemas/: md.py  res.py  sim.py
